--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-VUE_APP_BASE_API=http://localhost:8000/api
+#VUE_APP_BASE_API=https://admin.dazu.pl/api
+VUE_APP_BASE_API=https://admin.dazu.pl/api
 
