--- a/package.json
+++ b/package.json
@@ -1,96 +1,96 @@
 {
-  "name": "admin",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "axios": "^0.19",
-    "babel-loader": "^8.1.0",
-    "clipboard": "^2.0.6",
-    "core-js": "^3.6.5",
-    "css-loader": "^3.6.0",
-    "driver.js": "^0.9.7",
-    "dropzone": "^5.7.2",
-    "echarts": "^4.8.0",
-    "element-ui": "^2.13.2",
-    "file-loader": "^6.0.0",
-    "file-saver": "^2.0.2",
-    "fuse.js": "^3.6.1",
-    "js-cookie": "^2.2.1",
-    "jsonlint": "^1.6.3",
-    "jszip": "^3.5.0",
-    "leaflet": "^1.7.1",
-    "node-sass": "^4.14.1",
-    "normalize.css": "^8.0.1",
-    "nprogress": "^0.2.0",
-    "path-to-regexp": "^3.1.0",
-    "screenfull": "^4.2.1",
-    "sortablejs": "^1.10.2",
-    "tui-editor": "^1.4.6",
-    "vue": "2.6.10",
-    "vue-count-to": "^1.0.13",
-    "vue-i18n": "^8.21.0",
-    "vue-loader": "^15.9.3",
-    "vue-router": "^3.4.3",
-    "vue-splitpane": "^1.0.4",
-    "vue-svg-icon-component": "^0.3.0",
-    "vue2-editor": "^2.10.2",
-    "vue2-leaflet": "^2.6.0",
-    "vuedraggable": "^2.24.0",
-    "vuex": "3.1.1",
-    "xlsx": "^0.15.6"
-  },
-  "devDependencies": {
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "babel-eslint": "^10.1.0",
-    "babel-plugin-dynamic-import-node": "^2.3.3",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "compression-webpack-plugin": "^2.0.0",
-    "cross-env": "^7.0",
-    "eslint": "^5.16.0",
-    "eslint-loader": "^2.2.1",
-    "eslint-plugin-vue": "^5.2.3",
-    "husky": "^3.0.5",
-    "laravel-mix": "^5.0.1",
-    "laravel-mix-eslint": "^0.1.3",
-    "lint-staged": "^9.2.5",
-    "resolve-url-loader": "^3.1.0",
-    "sass-loader": "^8.0.0",
-    "script-loader": "^0.7.2",
-    "svg-sprite-loader": "^4.3.0",
-    "svgo": "^1.1.0",
-    "svgo-loader": "^2.1.0",
-    "vue-template-compiler": "2.6.10",
-    "webpack": "^4.44.1",
-    "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-chunk-rename-plugin": "^1.0.3",
-    "webpack-cli": "^3.3.12"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
+    "name": "admin",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "lint": "vue-cli-service lint"
     },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
+    "dependencies": {
+        "axios": "^0.19.2",
+        "babel-loader": "^8.1.0",
+        "clipboard": "^2.0.6",
+        "crypto-js": "^4.1.1",
+        "css-loader": "^3.6.0",
+        "driver.js": "^0.9.7",
+        "dropzone": "^5.9.3",
+        "echarts": "^4.9.0",
+        "element-ui": "^2.13.2",
+        "file-loader": "^6.2.0",
+        "file-saver": "^2.0.5",
+        "fuse.js": "^3.6.1",
+        "js-cookie": "^2.2.1",
+        "jsonlint": "^1.6.3",
+        "jszip": "^3.7.1",
+        "leaflet": "^1.7.1",
+        "node-sass": "^4.14.1",
+        "normalize.css": "^8.0.1",
+        "nprogress": "^0.2.0",
+        "path-to-regexp": "^3.1.0",
+        "screenfull": "^4.2.1",
+        "sortablejs": "^1.10.2",
+        "tui-editor": "^1.4.6",
+        "vue": "^2.6.10",
+        "vue-count-to": "^1.0.13",
+        "vue-i18n": "^8.26.5",
+        "vue-loader": "^15.9.3",
+        "vue-router": "^3.5.2",
+        "vue-splitpane": "^1.0.6",
+        "vue-svg-icon-component": "^0.3.0",
+        "vue-template-compiler": "^2.6.10",
+        "vue2-editor": "^2.10.2",
+        "vue2-leaflet": "^2.6.0",
+        "vuedraggable": "^2.24.0",
+        "vuex": "^3.1.1",
+        "xlsx": "^0.15.6"
     },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "devDependencies": {
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@vue/cli-service": "~4.5.0",
+        "@vue/compiler-sfc": "^3.0.0",
+        "babel-eslint": "^10.1.0",
+        "babel-plugin-dynamic-import-node": "^2.3.3",
+        "babel-plugin-syntax-dynamic-import": "^6.18.0",
+        "babel-plugin-syntax-jsx": "^6.18.0",
+        "babel-plugin-transform-vue-jsx": "^3.7.0",
+        "compression-webpack-plugin": "^2.0.0",
+        "cross-env": "^7.0",
+        "eslint": "^5.16.0",
+        "eslint-loader": "^2.2.1",
+        "eslint-plugin-vue": "^5.2.3",
+        "husky": "^3.0.5",
+        "laravel-mix": "^5.0.1",
+        "laravel-mix-eslint": "^0.1.3",
+        "lint-staged": "^9.2.5",
+        "resolve-url-loader": "^3.1.0",
+        "sass-loader": "^8.0.0",
+        "script-loader": "^0.7.2",
+        "svg-sprite-loader": "^4.3.0",
+        "svgo": "^1.1.0",
+        "svgo-loader": "^2.1.0",
+        "webpack": "^4.44.1",
+        "webpack-bundle-analyzer": "^3.8.0",
+        "webpack-chunk-rename-plugin": "^1.0.3",
+        "webpack-cli": "^3.3.12"
+    },
+    "eslintConfig": {
+        "root": true,
+        "env": {
+            "node": true
+        },
+        "extends": [
+            "plugin:vue/essential",
+            "eslint:recommended"
+        ],
+        "parserOptions": {
+            "parser": "babel-eslint"
+        },
+        "rules": {}
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not dead"
+    ]
 }
